--- a/mooc_src/mooc.css
+++ b/mooc_src/mooc.css
@@ -57,6 +57,10 @@ h1 {
   margin-bottom: 10px;
 }
 
+h1.extra-pad-header {
+  padding-top: 20px;
+}
+
 h2 {
   margin-top: 0px;
   padding-top: 0px;
