--- a/mooc_src/support/web/supplemental.css
+++ b/mooc_src/support/web/supplemental.css
@@ -111,13 +111,11 @@ td {
 }
 
 .prompt {
-    background-color: #303030;
-    color: white;
-    border-left: 5px solid #606060;
-    border-right: 5px solid #606060;
-    border-radius: 6px;
-    padding: 10px 20px 20px 20px;
-    margin: 10px 0;
+    background-color: #333333;
+    color: #FFFFFF;
+    border: 1px solid #505050;
+    border-radius: 5px;
+    padding: 5px;
     white-space: pre-wrap;
     word-wrap: break-word;
     font-family: monospace;
