One more attempt at tagline formatting.

--- a/lecture/support/web/supplemental.css
+++ b/lecture/support/web/supplemental.css
@@ -102,6 +102,11 @@ section {
 
 .section-tagline {
     font-weight: bold;
+    padding-bottom: 8px;
+}
+
+.section-tagline-sub {
+    font-weight: bold;
     padding-bottom: 10px;
 }
 
